@@ -7,6 +7,8 @@ LIBHDATE_MINOR_VERSION=4
 LIBHDATE_MICRO_VERSION=10
 
 VERSION=$LIBHDATE_MAJOR_VERSION.$LIBHDATE_MINOR_VERSION.$LIBHDATE_MICRO_VERSION
+
+dnl libtool library numbering
 VERSION_INFO=$LIBHDATE_MAJOR_VERSION:$LIBHDATE_MINOR_VERSION:0
 
 AC_SUBST(VERSION_INFO)
@@ -17,6 +19,7 @@ AM_MAINTAINER_MODE
 dnl Checks for programs.
 AC_ISC_POSIX
 AC_GNU_SOURCE
+AC_USE_SYSTEM_EXTENSIONS
 AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LN_S
@@ -39,15 +42,18 @@ AC_CHECK_PROG(have_swig, "swig", yes, no)
 
 dnl =======================================================================================
 
-build_pascal=no
-
 AC_CHECK_PROG(have_pascal, "fpc", yes, no)
 
-AC_ARG_ENABLE(pascal, [  --enable-pascal	build pascal binding [default=no]], build_pascal="$enableval", build_pascal=no)
+build_pascal=$have_pascal
 
-if test "x$have_pascal" = "xno"; then
-	build_pascal=no
-else
+AC_ARG_ENABLE([pascal], 
+  [AS_HELP_STRING([--disable-pascal],
+  [do not build pascal binding])],
+  [build_pascal=no], [build_pascal=$have_pascal])
+
+pascal_var=$enablevar
+
+if test "$have_pascal" = "yes"; then
 	PA_VERSION=`fpc -iV`
 	PA_TPR=`fpc -iTP`
 	PA_TOS=`fpc -iTO`
@@ -56,19 +62,26 @@ else
 	AC_SUBST([PA_MODULES_PATH])
 fi
 
-AM_CONDITIONAL(WITH_PASCAL, test "x$build_pascal" = "xyes")
+AM_CONDITIONAL(WITH_PASCAL, test "$build_pascal" = "yes")
 
 dnl =======================================================================================
 
-build_python=no
-
-AC_ARG_ENABLE(python, [  --enable-python	build python binding [default=no]], build_python="$enableval", build_python=no)
-
-AC_ARG_WITH(python-sitelib-dir, [  --with-python-sitelib-dir=PATH	path to python site lib ])
-
 AC_CHECK_PROG(have_python, "python", yes, no)
 
-if test "x$have_python" = "xyes"; then
+build_python=$have_python
+
+AC_ARG_ENABLE([python], 
+  [AS_HELP_STRING([--disable-python],
+  [do not build python binding])],
+  [build_python=no], [build_python=$have_python])
+
+python_var=$enablevar
+
+AC_ARG_WITH(python-sitelib-dir, 
+  [AS_HELP_STRING([--with-python-sitelib-dir=PATH],
+  [path to python site lib])])
+
+if test "$have_python" = "yes"; then
 	  PY_PREFIX=`python -c 'import sys ; print sys.prefix'`
 	  PY_VERSION=`python -c 'import sys ; print sys.version[[0:3]]'`
 	  AC_MSG_CHECKING(for $PY_PREFIX/include/python$PY_VERSION/Python.h)
@@ -76,7 +89,7 @@ if test "x$have_python" = "xyes"; then
 		  AC_MSG_RESULT(yes)
 		  PY_CFLAGS="-I$PY_PREFIX/include/python$PY_VERSION"
 		  
-		  if test "x$with_python_sitelib_dir" = "x" ; then
+		  if test "$with_python_sitelib_dir" = "" ; then
 		    PY_MODULES_PATH="$PY_PREFIX/lib/python$PY_VERSION/site-packages"
 		  else
 		    PY_MODULES_PATH=$with_python_sitelib_dir
@@ -85,7 +98,7 @@ if test "x$have_python" = "xyes"; then
 		  AC_SUBST([PY_VERSION])
 		  AC_SUBST([PY_CFLAGS])
 		  AC_SUBST([PY_MODULES_PATH])
-		  if test "x$have_swig" = "xno"; then
+		  if test "$have_swig" = "no"; then
 			build_python=no
 		  fi
 	  else
@@ -94,19 +107,26 @@ if test "x$have_python" = "xyes"; then
 	  fi
 fi
 
-AM_CONDITIONAL(WITH_PYTHON, test "x$build_python" = "xyes")
+AM_CONDITIONAL(WITH_PYTHON, test "$build_python" = "yes")
 
 dnl =======================================================================================
 
-build_perl=no
-
-AC_ARG_ENABLE(perl, [  --enable-perl		build perl binding [default=no]], build_perl="$enableval", build_perl=no)
-
-AC_ARG_WITH(perl-sitelib-dir, [  --with-perl-sitelib-dir=PATH		path to perl site lib ])
-
 AC_CHECK_PROG(have_perl, "perl", yes, no)
 
-if test "x$have_perl" = "xyes"; then
+build_perl=$have_perl
+
+AC_ARG_ENABLE([perl], 
+  [AS_HELP_STRING([--disable-perl],
+  [do not build perl binding])],
+  [build_perl=no], [build_perl=$have_perl])
+
+perl_var=$enablevar
+
+AC_ARG_WITH(perl-sitelib-dir, 
+  [AS_HELP_STRING([--with-perl-sitelib-dir=PATH],
+  [path to perl site lib])])
+  
+if test "$have_perl" = "yes"; then
 	  PE_PREFIX=`(perl -e 'use Config; print $Config{archlib};')`
 	  AC_MSG_CHECKING(for $PE_PREFIX/CORE/perl.h)
 	  if test -f $PE_PREFIX/CORE/perl.h; then
@@ -114,7 +134,7 @@ if test "x$have_perl" = "xyes"; then
 		  PE_CFLAGS="-I$PE_PREFIX/CORE "
 		  PE_CFLAGS=$PE_CFLAGS`(perl -e 'use Config; print $Config{cppflags};')`
 		  
-		  if test "x$with_perl_sitelib_dir" = "x" ; then
+		  if test "$with_perl_sitelib_dir" = "" ; then
 		    PE_MODULES_PATH=`(perl -e 'use Config; print $Config{sitelib};')`
 		  else
 		    PE_MODULES_PATH=$with_perl_sitelib_dir
@@ -131,9 +151,7 @@ if test "x$have_perl" = "xyes"; then
 	  fi
 fi
 
-dnl FIXME: on fedora PE_MODULES_PATH="/usr/lib/perl5/site_perl"
-
-AM_CONDITIONAL(WITH_PERL, test "x$build_perl" = "xyes")
+AM_CONDITIONAL(WITH_PERL, test "$build_perl" = "yes")
 
 dnl =======================================================================================
 
@@ -144,7 +162,7 @@ ALL_LINGUAS="he es_MX ru fr sv"
 AM_GNU_GETTEXT
 AM_GNU_GETTEXT_VERSION(0.10.40)
 
-if test "x${prefix}" = "xNONE"; then
+if test "${prefix}" = "NONE"; then
   AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${ac_default_prefix}/${DATADIRNAME}/locale")
 else
   AC_DEFINE_UNQUOTED(PACKAGE_LOCALE_DIR, "${prefix}/${DATADIRNAME}/locale")
@@ -154,9 +172,12 @@ dnl ============================================================================
 
 build_hcal=yes
 
-AC_ARG_ENABLE(hcal, [  --disable-hcal	build hcal/hdate [default=yes]], build_hcal="$enableval", build_hcal=yes)
+AC_ARG_ENABLE([hcal], 
+  [AS_HELP_STRING([--disable-hcal],
+  [do not build hcal/hdate utility programs])],
+  [build_hcal=no], [build_hcal=yes])
 
-AM_CONDITIONAL(WITH_HCAL, test "x$build_hcal" = "xyes")
+AM_CONDITIONAL(WITH_HCAL, test "$build_hcal" = "yes")
 
 dnl =======================================================================================
 
@@ -181,6 +202,7 @@ bindings/pascal/Makefile
 ])
 
 dnl ===========================================================================================
+
 echo "
 $PACKAGE-$VERSION
 
